# solipsism

./: .gitignore  README.md  main-lite.py  main.py  pyproject.toml
notebook/: Untitled.ipynb  test.ipynb
solipsism/core/: context.py  llm.py  lpml.py  manager.py  system.py  tool.py
solipsism/core/_trash/: __llm.py  _llm.py
solipsism/interface/: chat_interface.py  user_context.py
solipsism/notes/: readme.md  solipsism_memo.md
solipsism/prompts/: root_prompt.lpml
solipsism/tools/: bash.py  file_io.py  get_tool_details.py  manager_tools.py  python.py  tool_management.py
